[package]
name = "humanamademark-com"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "*"
html-node = { version = "0.5.0", features = ["typed"] }
rstml = "*"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
